--- a/CV_spanish.tex
+++ b/CV_spanish.tex
@@ -34,7 +34,7 @@
 
 \begin{center}
 \huge\name\\
-\normalsize Phd candidate and lecturer\\
+\normalsize Candidato a doctor y profesor universitario\\
 \address\\
 \faIcon{mobile-alt} \phone \hspace{5pt}|\hspace{5pt} \faIcon[regular]{envelope} \href{mailto:\email}{\email}
 \hspace{5pt}|\hspace{5pt} \faIcon{github} \href{https://github.com/ealvnrz}{\github}
