--- a/CV_spanish.tex
+++ b/CV_spanish.tex
@@ -1,16 +1,14 @@
 \documentclass[10pt,a4paper]{article}
 %\usepackage[utf8]{inputenc}
 
-
-
-
 %\usepackage[default]{sourcesanspro}
 %\usepackage{tgschola}
 %\usepackage[default]{raleway}
-
+\usepackage[T1]{fontenc}
+%\usepackage{lmodern}
 \usepackage[sfdefault,light]{roboto}
 %sfdefault,light,condensed,thin
-\usepackage[T1]{fontenc}
+
 
 \usepackage[spanish]{babel}
 \usepackage{amsmath}
@@ -70,7 +68,8 @@
 \headedsubsection % Job title entry for the current employer
 {\textsc{Doctorado en Estadística}}
 {2017 -- Actualidad}
-{\bodytext{Alumno regular. Profesor Guía: Moreno Bevilacqua.}}
+{\bodytext{Candidato a Doctor: ''On modeling point-referenced spatial data with
+bounded support". \\Profesor Guía: Moreno Bevilacqua.}}
 }
 
 
