--- a/CV_es/CV_es.tex
+++ b/CV_es/CV_es.tex
@@ -1,9 +1,7 @@
 \documentclass[10pt,a4paper]{article}
-%\usepackage[utf8]{inputenc}
 
-%\usepackage[default]{sourcesanspro}
-%\usepackage{tgschola}
-%\usepackage[default]{raleway}
+
+%\usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 %\usepackage{lmodern}
 \usepackage[sfdefault,light]{roboto}
@@ -68,8 +66,8 @@
 \headedsubsection % Job title entry for the current employer
 {\textsc{Doctorado en Estadística}}
 {2017 -- Actualidad}
-{\bodytext{Candidato a Doctor: ''On modeling point-referenced spatial data with
-bounded support". \\Profesor Guía: Moreno Bevilacqua.}}
+{\bodytext{Candidato a Doctor: ''Clayton copula random fields with application to
+spatial data with bounded support". \\Profesor Guía: Moreno Bevilacqua.}}
 }
 
 
