--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -126,7 +126,6 @@ Develop Research of Excellence for Advanced Meritorious Students \
   \item LFIS 325: Statistics for physical sciences %[2020,2021]
   \item IECD 325: Linear models and experimental designs. %[2021]
   \end{itemize}
-  Most lecture notes are available in \textbf{\href{https://github.com/ealvnrz}{github}}.
 }}}
 
 \headedsection 
@@ -233,13 +232,18 @@ complete creation of the model using information from the BI databases and the p
 \item Marco Flores, \textbf{Eloy Alvarado} , Christina Sanzana-Luengo. \textit{``Experience of caries and tooth loss in the chilean elderly population benefited by TEGO project in the context of Covid-19 pandemic.''}. \textit{finishing the manuscript}.
 \end{enumerate}
 
+\roottitle{\faFileInvoiceDollar \ Grants and projects \hrulefill}
+\begin{itemize}
+\item National Doctoral Degree Scholarship, ANID, 2018. N° 2018-21180953
+\item \textit{``Semi-presential technological support platform for urgent and
+priority dental care for the elderly in the context of the COVID-19 pandemic in the Chilean population''}, funded by the Rapid Allocation of Funds of the National Agency of Research and
+Development (ANID), Reference No. COVID0766, Chile. \textbf{Collaborator}.
+\end{itemize}
 
 
 
 
-
-
-\roottitle{\faIcon{comments} Scientific Events \hrulefill}
+\roottitle{\faComments[regular] Scientific Events \hrulefill}
 \begin{itemize}
 \item Attendant, XIX Valparaíso Statistical Week, Valparaíso, Chile, 2013. \\ Organizer:  \href{http://www.upla.cl}{Universidad de Playa Ancha}
 \item Presenter, ``\textit{Stochastics differential equations in mathematical finance: The Black-Scholes Model}'', XXI Valparaíso Statistical Week, Valparaíso, Chile, 2015. \\ Organizer: \href{http://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}
