--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -21,6 +21,7 @@
 %	NAME AND CONTACT INFORMATION
 %----------------------------------------------------------------------------------------
 \newcommand{\name}{Eloy Alvarado Narváez}
+\newcommand{\dob}{August 18, 1990.}
 \newcommand{\address}{Valparaíso, Chile.}
 \newcommand{\phone}{+56 9 85682232}
 \newcommand{\email}{ealvaradonarvaez@gmail.com}
@@ -28,12 +29,13 @@
 \newcommand{\linkedin}{ealvnrz}
 
 \begin{center}
-\huge\name\\
+\huge\name \\
+
 \normalsize PhD candidate and university lecturer \\
 \address\\
-\faIcon{mobile-alt} \phone \hspace{5pt}|\hspace{5pt} \faIcon[regular]{envelope} \href{mailto:\email}{\email}
-\hspace{5pt}|\hspace{5pt} \faIcon{github} \href{https://github.com/ealvnrz}{\github}
-\hspace{5pt}|\hspace{5pt} \faIcon{linkedin} \href{https://www.linkedin.com/in/ealvnrz/}{\linkedin}
+\faCalendar*[regular]\ \dob \hspace{5pt}|\hspace{5pt}\faIcon{mobile-alt}\ \phone \hspace{5pt}|\hspace{5pt} \faIcon[regular]{envelope}\ \href{mailto:\email}{\email}
+\hspace{5pt}|\hspace{5pt} \faIcon{github} \ \href{https://github.com/ealvnrz}{\github}
+\hspace{5pt}|\hspace{5pt} \faIcon{linkedin} \ \href{https://www.linkedin.com/in/ealvnrz/}{\linkedin}
 \end{center}
 
 %\spacedhrule{0.9em}{-0.4em} 
@@ -159,7 +161,7 @@ Develop Research of Excellence for Advanced Meritorious Students \
 \headedsubsection 
 {External Adviser}
 {July '21 -- Present}
-{\bodytext{Spatio-temporal modeling advisor for the project \textit{``Marine Mammal Bycatch Risk Assessment in Chile''}, funded by San Francisco State University.
+{\bodytext{Spatio-temporal modeling adviser for the project \textit{``Marine Mammal Bycatch Risk Assessment in Chile''}, funded by San Francisco State University.
 }}}
 
 
@@ -230,11 +232,12 @@ complete creation of the model using information from the BI databases and the p
 \begin{enumerate}
 \item Moreno Bevilacqua, \textbf{Eloy Alvarado}, Christian Caamaño, Fernando Quintana. \textit{``Clayton copula random fields with application to spatial data with bounded support''}. \textit{finishing the manuscript}.
 \item Marco Flores, \textbf{Eloy Alvarado} , Christina Sanzana-Luengo. \textit{``Experience of caries and tooth loss in the chilean elderly population benefited by TEGO project in the context of Covid-19 pandemic.''}. \textit{finishing the manuscript}.
+\item \textbf{Eloy Alvarado}, Héctor Araya y Nicolás Moreno. \textit{``Least square estimation for fractional CIR process with $H>1/2$ and small noise''}.
 \end{enumerate}
 
 \roottitle{\faFileInvoiceDollar \ Grants and projects \hrulefill}
 \begin{itemize}
-\item National Doctoral Degree Scholarship, ANID, 2018. N° 2018-21180953
+\item National Doctoral Degree Scholarship, ANID, 2018. N° 2018-21180953.
 \item \textit{``Semi-presential technological support platform for urgent and
 priority dental care for the elderly in the context of the COVID-19 pandemic in the Chilean population''}, funded by the Rapid Allocation of Funds of the National Agency of Research and
 Development (ANID), Reference No. COVID0766, Chile. \textbf{Collaborator}.
