--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -248,11 +248,17 @@ Development (ANID), Reference No. COVID0766, Chile. \textbf{Collaborator}.
 
 \roottitle{\faComments[regular] Scientific Events \hrulefill}
 \begin{itemize}
-\item Attendant, XIX Valparaíso Statistical Week, Valparaíso, Chile, 2013. \\ Organizer:  \href{http://www.upla.cl}{Universidad de Playa Ancha}
-\item Presenter, ``\textit{Stochastics differential equations in mathematical finance: The Black-Scholes Model}'', XXI Valparaíso Statistical Week, Valparaíso, Chile, 2015. \\ Organizer: \href{http://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}
+\item Attendant, Data Science Workshop, Remote/Valparaíso, Chile, 2021.\\
+Organizer: \href{https://ideuv.uv.cl/}{Statistics Institute, Universidad de Valparaíso}
+
 \item Attendant, XLII National Convention on Statistics, Concepción, Chile, 2015. \\
 Organizer:  \href{http://www.soche.cl}{ Chilean Statistical
 Society}
+\item Presenter, ``\textit{Stochastics differential equations in mathematical finance: The Black-Scholes Model}'', XXI Valparaíso Statistical Week, Valparaíso, Chile, 2015. \\ Organizer: \href{http://www.pucv.cl}{Pontificia Universidad Católica de Valparaíso}
+
+\item Attendant, XIX Valparaíso Statistical Week, Valparaíso, Chile, 2013. \\ Organizer:  \href{http://www.upla.cl}{Universidad de Playa Ancha}
+
+
 \end{itemize}
 
 \end{document}
