--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -249,7 +249,7 @@ Development (ANID), Reference No. COVID0766, Chile. \textbf{Collaborator}.
 \roottitle{\faComments[regular] Scientific Events \hrulefill}
 \begin{itemize}
 \item Attendant, Data Science Workshop, Remote/Valparaíso, Chile, 2021.\\
-Organizer: \href{https://ideuv.uv.cl/}{Statistics Institute, Universidad de Valparaíso}
+Organizer: \href{https://ideuv.uv.cl/}{Instituto de Estadística, Universidad de Valparaíso}
 
 \item Attendant, XLII National Convention on Statistics, Concepción, Chile, 2015. \\
 Organizer:  \href{http://www.soche.cl}{ Chilean Statistical
