--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -194,18 +194,21 @@ complete creation of the model using information from the BI databases and the p
 
 \roottitle{\faIcon{cog} Skills \hrulefill} 
 
-\inlineheadsection
-{Programming Languages}{R, Python, C++, \LaTeX, SQL, SAS.}
-\inlineheadsection
-{Softwares:}{Tableau, SPSS, STATA, MS suite.}
+\headedsubsection 
+{Programming Languages:}
+{}
+{\bodytext{R, Python, C++, \LaTeX, SQL, SAS.}}
 
-%------------------------------------------------
 
-\inlineheadsection 
+\headedsubsection 
+{Softwares:}
+{}
+{\bodytext{Tableau, SPSS, STATA, GeoDa, QGIS, MS suite.}}
+
+\headedsubsection 
 {Languages:}
-{Español/Spanish \textit{(native language)}, English \textit{(Full professional proficiency, TOEFL iBT score: 90, November, 2015)}, Korean/한국어 \textit{(Beginner A2, Korea University)}, French/Français \textit{(Beginner A1, Institut Français).}}
-
-%------------------------------------------------
+{}
+{\bodytext{Español/Spanish \textit{(native language)}, English \textit{(Full professional proficiency, TOEFL iBT score: 90, November, 2015)}, Korean/한국어 \textit{(Beginner A2, Korea University)}, French/Français \textit{(Beginner A1, Institut Français).}}}
 
 
 %----------------------------------------------------------------------------------------
@@ -214,27 +217,54 @@ complete creation of the model using information from the BI databases and the p
 
 \roottitle{\faIcon[regular]{file-alt}  Research \hrulefill}
 %fix with .bib once published
-\inlineheadsection 
-{Accepted or published research article:}{}
 
+
+%----------------------------------------------------------------------------------------
+%	RESEARCH AND SCIENTIFIC EVENTS
+%----------------------------------------------------------------------------------------
+
+%----------------------------------------------------------------------------------------
+%	ACCEPTED OR PUBLISHED RESEARCH ARTICLES
+%----------------------------------------------------------------------------------------
+
+\headedsubsection 
+{Accepted or published research article:}{}
+{
 \begin{enumerate}
 \item Víctor Beltrán, Pablo Acuña-Mardones, Jaime Díaz, \textbf{Eloy Alvarado} and Alfredo von Marttens. \textit{``TEGO: A new concept of teledentistry for the elderly through a web platform and mobile app in the context of the COVID-19 pandemic''}, Journal of Oral Research. \textit{Accepted article, scheduled for publication in Supplementary Issue 2, 2021}.
+
 \item Cristina Sanzana-Luengo, Leonardo Díaz, Liliann Abarza, \textbf{Eloy Alvarado} and Víctor Beltrán. \textit{``Teledentistry protocol for the elderly in the context of the COVID-19 pandemic through a web platform / mobile app: approach from the general dentist''}. Journal of Oral Research. \textit{Accepted article, scheduled for publication in Supplementary Issue 2, 2021}.
 \end{enumerate}
-\inlineheadsection 
-{Manuscripts under review:}{}
-\begin{enumerate}
-\item M. Stehlik, J. Kiselak, A. Dinamarca, \textbf{Eloy Alvarado}, F. Plaza, F. Medina Marín, S. Stehlikova, B. Venegas, A. Gajdos, Y. Li, S. Katuscak, A. Brazinova A, Y. Lu. \textit{``REDACS: Regional emergency driven adaptive cluster sampling for effective COVID-19 prevalence''}. Stochastic Analysis and Applications, \textit{under final review}.
-\end{enumerate}
+}
+%----------------------------------------------------------------------------------------
+%	UNDER REVIEW
+%----------------------------------------------------------------------------------------
 
-\inlineheadsection 
-{Working papers:}{}
-\begin{enumerate}
+\headedsubsection 
+{Manuscripts under review:}{}
+{\begin{enumerate}
+\item M. Stehlik, J. Kiselak, A. Dinamarca, \textbf{Eloy Alvarado}, F. Plaza, F. Medina Marín, S. Stehlikova, B. Venegas, A. Gajdos, Y. Li, S. Katuscak, A. Brazinova A, Y. Lu. \textit{``REDACS: Regional emergency driven adaptive cluster sampling for effective COVID-19 prevalence''}. Stochastic Analysis and Applications, \textit{under final review}.
+
+\item Víctor Beltrán, Alfredo von Marttens, Pablo Acuña-Mardones, Cristina Sanzana-Luengo, Sandra Rueda, \textbf{Eloy Alvarado}, Marco Flores, Angeline Cerda, Bernardo Venegas. \textit{``Implementation of a Teledentistry Platform for Dental Emergencies for the Elderly in the Context of the COVID-19 Pandemic in Chile''}. BioMed Research International, \textit{under initial review}.
+\end{enumerate}
+}
+
+%----------------------------------------------------------------------------------------
+%	WORKING ARTICLES
+%----------------------------------------------------------------------------------------
+
+\headedsubsection 
+{Manuscripts under review:}{}
+{\begin{enumerate}
 \item Moreno Bevilacqua, \textbf{Eloy Alvarado}, Christian Caamaño, Fernando Quintana. \textit{``Clayton copula random fields with application to spatial data with bounded support''}. \textit{finishing the manuscript}.
 \item Marco Flores, \textbf{Eloy Alvarado} , Christina Sanzana-Luengo. \textit{``Experience of caries and tooth loss in the chilean elderly population benefited by TEGO project in the context of Covid-19 pandemic.''}. \textit{finishing the manuscript}.
 \item \textbf{Eloy Alvarado}, Héctor Araya y Nicolás Moreno. \textit{``Least square estimation for fractional CIR process with $H>1/2$ and small noise''}.
 \end{enumerate}
+}
 
+%----------------------------------------------------------------------------------------
+%	GRANTS AND PROJECTS
+%----------------------------------------------------------------------------------------
 \roottitle{\faFileInvoiceDollar \ Grants and projects \hrulefill}
 \begin{itemize}
 \item National Doctoral Degree Scholarship, ANID, 2018. N° 2018-21180953.
