--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -254,7 +254,7 @@ complete creation of the model using information from the BI databases and the p
 %----------------------------------------------------------------------------------------
 
 \headedsubsection 
-{Manuscripts under review:}{}
+{Working papers:}{}
 {\begin{enumerate}
 \item Moreno Bevilacqua, \textbf{Eloy Alvarado}, Christian Caamaño, Fernando Quintana. \textit{``Clayton copula random fields with application to spatial data with bounded support''}. \textit{finishing the manuscript}.
 \item Marco Flores, \textbf{Eloy Alvarado} , Christina Sanzana-Luengo. \textit{``Experience of caries and tooth loss in the chilean elderly population benefited by TEGO project in the context of Covid-19 pandemic.''}. \textit{finishing the manuscript}.
