--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -128,6 +128,7 @@ Develop Research of Excellence for Advanced Meritorious Students \
   \item LFIS 325: Statistics for physical sciences %[2020,2021]
   \item IECD 325: Linear models and experimental designs. %[2021]
   \end{itemize}
+  All lecture notes can be found in personal \href{https://www.linkedin.com/in/ealvnrz/}{github}.
 }}}
 
 \headedsection 
