--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -232,6 +232,9 @@ complete creation of the model using information from the BI databases and the p
 {Accepted or published research article:}{}
 {
 \begin{enumerate}
+
+\item M. Stehlik, J. Kiselak, A. Dinamarca, \textbf{Eloy Alvarado}, F. Plaza, F. Medina Marín, S. Stehlikova, B. Venegas, A. Gajdos, Y. Li, S. Katuscak, A. Brazinova A, Y. Lu. \textit{``REDACS: Regional emergency driven adaptive cluster sampling for effective COVID-19 prevalence''}. Stochastic Analysis and Applications.\\ \href{https://doi.org/10.1080/07362994.2022.2033126}{https://doi.org/10.1080/07362994.2022.2033126}
+
 \item Víctor Beltrán, Pablo Acuña-Mardones, Jaime Díaz, \textbf{Eloy Alvarado} and Alfredo von Marttens. \textit{``TEGO: A new concept of teledentistry for the elderly through a web platform and mobile app in the context of the COVID-19 pandemic''}, Journal of Oral Research. \textit{Accepted article, scheduled for publication in Supplementary Issue 2, 2021}.
 
 \item Cristina Sanzana-Luengo, Leonardo Díaz, Liliann Abarza, \textbf{Eloy Alvarado} and Víctor Beltrán. \textit{``Teledentistry protocol for the elderly in the context of the COVID-19 pandemic through a web platform / mobile app: approach from the general dentist''}. Journal of Oral Research. \textit{Accepted article, scheduled for publication in Supplementary Issue 2, 2021}.
@@ -244,7 +247,6 @@ complete creation of the model using information from the BI databases and the p
 \headedsubsection 
 {Manuscripts under review:}{}
 {\begin{enumerate}
-\item M. Stehlik, J. Kiselak, A. Dinamarca, \textbf{Eloy Alvarado}, F. Plaza, F. Medina Marín, S. Stehlikova, B. Venegas, A. Gajdos, Y. Li, S. Katuscak, A. Brazinova A, Y. Lu. \textit{``REDACS: Regional emergency driven adaptive cluster sampling for effective COVID-19 prevalence''}. Stochastic Analysis and Applications, \textit{under final review}.
 
 \item Víctor Beltrán, Alfredo von Marttens, Pablo Acuña-Mardones, Cristina Sanzana-Luengo, Sandra Rueda, \textbf{Eloy Alvarado}, Marco Flores, Angeline Cerda, Bernardo Venegas. \textit{``Implementation of a Teledentistry Platform for Dental Emergencies for the Elderly in the Context of the COVID-19 Pandemic in Chile''}. BioMed Research International, \textit{under initial review}.
 \end{enumerate}
