--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -12,6 +12,8 @@
 \usepackage{amsmath}
 \usepackage{kotex}
 \usepackage{fontawesome5}
+\usepackage{natbib}
+\usepackage{bibentry}
 
 \include{structure} 
 %\hyphenation{Some-long-word} 
@@ -86,7 +88,7 @@
 \headedsubsection 
 {Bachelor in Statistics / Statistician }
 {2013 -- 2015}
-{\bodytext{Lecturer assistant for introductory and advanced courses (3-4 each semester)\\
+{\bodytext{Teaching assistant for introductory and advanced courses (3-4 each semester)\\
 Thesis title: ``\textit{Ecuaciones diferenciales estocásticas con aplicación en matemática financiera: Modelo de Black-Scholes}'' (Stochastic differential equations with applications in mathematical finance: The Black-Scholes model).\ Graduation grade: 6.1 (1-7 scale).}
 \textbf{DREAMS program}: To
 Develop Research of Excellence for Advanced Meritorious Students \ 
@@ -119,7 +121,7 @@ Develop Research of Excellence for Advanced Meritorious Students \
 {University lecturer}
 {August '19 -- Present}
 {\bodytext{Lecturer of several courses for undergraduate programs:\\
- Data science and statistical engineering, Construction engineering \& Bachelor in Physics.
+ Data Science and Statistical Engineering, Construction Engineering \& Bachelor in Physics.
   \\ \textbf{Course list}:
   \begin{itemize}
   \item IEST 213: Statistical Methods %[2019]
@@ -127,8 +129,11 @@ Develop Research of Excellence for Advanced Meritorious Students \
   \item IEC 311: Probability and statistics %[2020,2021]
   \item LFIS 325: Statistics for physical sciences %[2020,2021]
   \item IECD 325: Linear models and experimental designs. %[2021]
+  \item IECD 411: Machine learning %[2022]
+  \item IECD 414: Time series %[2022]
+  \item IECD 415: Multivariate methods %[2022]
   \end{itemize}
-  All lecture notes can be found in personal \href{https://github.com/ealvnrz}{github}.
+  Lecture notes can be found in personal \href{https://github.com/ealvnrz}{github}.
 }}}
 
 \headedsection 
@@ -146,7 +151,7 @@ Develop Research of Excellence for Advanced Meritorious Students \
 \headedsubsection 
 {University Lecturer}
 {March '17 -- December '17}
-{\bodytext{Lecturer of introductory statistics courses for the undergraduate programs of electrical and electronic engineering.
+{\bodytext{Lecturer of introductory statistics courses for undergraduate programs of electrical and electronic engineering.
 }}}
 
 %----------------------------------------------------------------------------------------
@@ -216,6 +221,7 @@ complete creation of the model using information from the BI databases and the p
 %	RESEARCH AND SCIENTIFIC EVENTS
 %----------------------------------------------------------------------------------------
 
+
 \roottitle{\faIcon[regular]{file-alt}  Research \hrulefill}
 %fix with .bib once published
 
@@ -228,29 +234,32 @@ complete creation of the model using information from the BI databases and the p
 %	ACCEPTED OR PUBLISHED RESEARCH ARTICLES
 %----------------------------------------------------------------------------------------
 
+\nobibliography{articles}
+\bibliographystyle{unsrt}
+
 \headedsubsection 
 {Accepted or published research article:}{}
 {
 \begin{enumerate}
+\item \bibentry{stehlik2022redacs}
 
-\item M. Stehlik, J. Kiselak, A. Dinamarca, \textbf{Eloy Alvarado}, F. Plaza, F. Medina Marín, S. Stehlikova, B. Venegas, A. Gajdos, Y. Li, S. Katuscak, A. Brazinova A, Y. Lu. \textit{``REDACS: Regional emergency driven adaptive cluster sampling for effective COVID-19 prevalence''}. Stochastic Analysis and Applications.\\ \href{https://doi.org/10.1080/07362994.2022.2033126}{https://doi.org/10.1080/07362994.2022.2033126}
+\item \bibentry{beltran2022implementation}
 
-\item Víctor Beltrán, Pablo Acuña-Mardones, Jaime Díaz, \textbf{Eloy Alvarado} and Alfredo von Marttens. \textit{``TEGO: A new concept of teledentistry for the elderly through a web platform and mobile app in the context of the COVID-19 pandemic''}, Journal of Oral Research. \textit{Accepted article, scheduled for publication in Supplementary Issue 2, 2021}.
+\item Víctor Beltrán, Pablo Acuña-Mardones, Jaime Díaz, Eloy Alvarado and Alfredo von Marttens. \textit{``TEGO: A new concept of teledentistry for the elderly through a web platform and mobile app in the context of the COVID-19 pandemic''}, Journal of Oral Research. \textit{Accepted article, scheduled for publication in Supplementary Issue 2, 2021}.
 
-\item Cristina Sanzana-Luengo, Leonardo Díaz, Liliann Abarza, \textbf{Eloy Alvarado} and Víctor Beltrán. \textit{``Teledentistry protocol for the elderly in the context of the COVID-19 pandemic through a web platform / mobile app: approach from the general dentist''}. Journal of Oral Research. \textit{Accepted article, scheduled for publication in Supplementary Issue 2, 2021}.
+\item Cristina Sanzana-Luengo, Leonardo Díaz, Liliann Abarza, Eloy Alvarado and Víctor Beltrán. \textit{``Teledentistry protocol for the elderly in the context of the COVID-19 pandemic through a web platform / mobile app: approach from the general dentist''}. Journal of Oral Research. \textit{Accepted article, scheduled for publication in Supplementary Issue 2, 2021}.
 \end{enumerate}
 }
 %----------------------------------------------------------------------------------------
 %	UNDER REVIEW
 %----------------------------------------------------------------------------------------
 
-\headedsubsection 
-{Manuscripts under review:}{}
-{\begin{enumerate}
-
-\item Víctor Beltrán, Alfredo von Marttens, Pablo Acuña-Mardones, Cristina Sanzana-Luengo, Sandra Rueda, \textbf{Eloy Alvarado}, Marco Flores, Angeline Cerda, Bernardo Venegas. \textit{``Implementation of a Teledentistry Platform for Dental Emergencies for the Elderly in the Context of the COVID-19 Pandemic in Chile''}. BioMed Research International, \textit{under initial review}.
-\end{enumerate}
-}
+%\headedsubsection 
+%{Manuscripts under review:}{}
+%{\begin{enumerate}
+%\item 
+%\end{enumerate}
+%}
 
 %----------------------------------------------------------------------------------------
 %	WORKING ARTICLES
@@ -259,9 +268,9 @@ complete creation of the model using information from the BI databases and the p
 \headedsubsection 
 {Working papers:}{}
 {\begin{enumerate}
-\item Moreno Bevilacqua, \textbf{Eloy Alvarado}, Christian Caamaño, Fernando Quintana. \textit{``Clayton copula random fields with application to spatial data with bounded support''}. \textit{finishing the manuscript}.
-\item Marco Flores, \textbf{Eloy Alvarado} , Christina Sanzana-Luengo. \textit{``Experience of caries and tooth loss in the chilean elderly population benefited by TEGO project in the context of Covid-19 pandemic.''}. \textit{finishing the manuscript}.
-\item \textbf{Eloy Alvarado}, Héctor Araya y Nicolás Moreno. \textit{``Least square estimation for fractional CIR process with $H>1/2$ and small noise''}.
+\item Moreno Bevilacqua, Eloy Alvarado, Christian Caamaño, Fernando Quintana. \textit{``Clayton copula random fields with application to spatial data with bounded support''}. \textit{finishing the manuscript}.
+\item Marco Flores, Eloy Alvarado , Christina Sanzana-Luengo. \textit{``Experience of caries and tooth loss in the chilean elderly population benefited by TEGO project in the context of Covid-19 pandemic.''}. \textit{finishing the manuscript}.
+\item Eloy Alvarado, Héctor Araya and Nicolás Moreno. \textit{``Least square estimation for fractional CIR process with $H>1/2$ and small noise''}.
 \end{enumerate}
 }
 
@@ -273,7 +282,7 @@ complete creation of the model using information from the BI databases and the p
 \item National Doctoral Degree Scholarship, ANID, 2018. N° 2018-21180953.
 \item \textit{``Semi-presential technological support platform for urgent and
 priority dental care for the elderly in the context of the COVID-19 pandemic in the Chilean population''}, funded by the Rapid Allocation of Funds of the National Agency of Research and
-Development (ANID), Reference No. COVID0766, Chile. \textbf{Collaborator}.
+Development (ANID), Reference No. COVID0766, Chile. Collaborator.
 \end{itemize}
 
 
@@ -293,5 +302,10 @@ Society}
 
 
 \end{itemize}
+
+
+
+
+
 
 \end{document}
