--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -245,9 +245,9 @@ complete creation of the model using information from the BI databases and the p
 
 \item \bibentry{beltran2022implementation}
 
-\item Víctor Beltrán, Pablo Acuña-Mardones, Jaime Díaz, Eloy Alvarado and Alfredo von Marttens. \textit{``TEGO: A new concept of teledentistry for the elderly through a web platform and mobile app in the context of the COVID-19 pandemic''}, Journal of Oral Research. \textit{Accepted article, scheduled for publication in Supplementary Issue 2, 2021}.
+\item \bibentry{beltran2022tego}
 
-\item Cristina Sanzana-Luengo, Leonardo Díaz, Liliann Abarza, Eloy Alvarado and Víctor Beltrán. \textit{``Teledentistry protocol for the elderly in the context of the COVID-19 pandemic through a web platform / mobile app: approach from the general dentist''}. Journal of Oral Research. \textit{Accepted article, scheduled for publication in Supplementary Issue 2, 2021}.
+\item Cristina Sanzana-Luengo, Leonardo Díaz, Liliann Abarza, Eloy Alvarado and Víctor Beltrán. \textit{``Teledentistry protocol for the elderly in the context of the COVID-19 pandemic through a web platform / mobile app: approach from the general dentist''}. Journal of Oral Research. \textit{Accepted article}.
 \end{enumerate}
 }
 %----------------------------------------------------------------------------------------
