--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -15,6 +15,7 @@
 \usepackage{natbib}
 \usepackage{bibentry}
 
+
 \include{structure} 
 %\hyphenation{Some-long-word} 
 \begin{document} 
@@ -241,15 +242,20 @@ complete creation of the model using information from the BI databases and the p
 {Accepted or published research article:}{}
 {
 \begin{enumerate}
-\item \bibentry{stehlik2022redacs}
+\item \bibentry{Stehlik2022}
 
-\item \bibentry{beltran2022implementation}
+\item \bibentry{Beltran2022}
 
-\item \bibentry{beltran2022tego}
+\item \bibentry{Beltran2022a}
 
-\item Cristina Sanzana-Luengo, Leonardo Díaz, Liliann Abarza, Eloy Alvarado and Víctor Beltrán. \textit{``Teledentistry protocol for the elderly in the context of the COVID-19 pandemic through a web platform / mobile app: approach from the general dentist''}. Journal of Oral Research. \textit{Accepted article}.
+\item \bibentry{SanzanaLuengo2022}
+
 \end{enumerate}
 }
+
+
+
+
 %----------------------------------------------------------------------------------------
 %	UNDER REVIEW
 %----------------------------------------------------------------------------------------
