--- a/CV_en/articles.bib
+++ b/CV_en/articles.bib
@@ -1,27 +1,37 @@
-@article{beltran2022implementation,
-  title={Implementation of a Teledentistry Platform for Dental Emergencies for the Elderly in the Context of the COVID-19 Pandemic in Chile},
-  author={Beltr{\'a}n, V{\'\i}ctor and von Marttens, Alfredo and Acu{\~n}a-Mardones, Pablo and Sanzana-Luengo, Cristina and Rueda-Vel{\'a}squez, Sandra J and Alvarado, Eloy and Flores, Marco and Cerda, Angeline and Venegas, Bernardo},
-  journal={BioMed Research International},
-  volume={2022},
-  year={2022},
-  publisher={Hindawi}
+@Article{Stehlik2022,
+  author    = {Stehl{\'\i}k, M and Kisel'{\'a}k, J and Dinamarca, A and Alvarado, E and Plaza, F and Medina, FA and Stehl{\'\i}kov{\'a}, S and Marek, J and Venegas, B and Gajdo{\v{s}}, A and others},
+  journal   = {Stochastic Analysis and Applications},
+  title     = {REDACS: Regional emergency-driven adaptive cluster sampling for effective COVID-19 management},
+  year      = {2022},
+  pages     = {1--35},
+  publisher = {Taylor \& Francis},
 }
 
-@article{stehlik2022redacs,
-  title={REDACS: Regional emergency-driven adaptive cluster sampling for effective COVID-19 management},
-  author={Stehl{\'\i}k, M and Kisel'{\'a}k, J and Dinamarca, A and Alvarado, E and Plaza, F and Medina, FA and Stehl{\'\i}kov{\'a}, S and Marek, J and Venegas, B and Gajdo{\v{s}}, A and others},
-  journal={Stochastic Analysis and Applications},
-  pages={1--35},
-  year={2022},
-  publisher={Taylor \& Francis}
+@Article{Beltran2022,
+  author    = {Beltr{\'a}n, V{\'\i}ctor and von Marttens, Alfredo and Acu{\~n}a-Mardones, Pablo and Sanzana-Luengo, Cristina and Rueda-Vel{\'a}squez, Sandra J and Alvarado, Eloy and Flores, Marco and Cerda, Angeline and Venegas, Bernardo},
+  journal   = {BioMed Research International},
+  title     = {Implementation of a Teledentistry Platform for Dental Emergencies for the Elderly in the Context of the COVID-19 Pandemic in Chile},
+  year      = {2022},
+  volume    = {2022},
+  publisher = {Hindawi},
 }
 
-@article{beltran2022tego,
-  title={TEGO: A new concept of teledentistry for the elderly through a web platform and mobile app in the context of the covid-19 pandemic.},
-  author={Beltr{\'a}n, V{\'\i}ctor and Acu{\~n}a-Mardones, Pablo and D{\'\i}az, Jaime and Alvarado, Eloy and von Marttens, Alfredo},
-  journal={Journal of Oral Research},
-  pages={1--8},
-  year={2022}
+@Article{Beltran2022a,
+  author    = {Beltr{\'a}n, V{\'\i}ctor and Mardones, Pablo Acu{\~n}a and D{\'\i}az, Jaime and Alvarado, Eloy and von Marttens, Alfredo},
+  journal   = {Journal of Oral Research},
+  title     = {TEGO: A new concept of teledentistry for the elderly through a web platform and mobile app in the context of the covid-19 pandemic.},
+  year      = {2022},
+  number    = {1},
+  pages     = {1--8},
+  publisher = {Universidad de Concepci{\'o}n},
+}
+
+@Article{SanzanaLuengo2022,
+  author  = {Sanzana-Luengo, Cristina and D{\'\i}az, Leonardo and Abarza, Liliann and Alvarado, Eloy and Beltr{\'a}n, V{\'\i}ctor},
+  journal = {Journal of Oral Research},
+  title   = {Teledentistry protocol for the elderly in the context of the COVID-19 pandemic through a web platform/mobile app: approach from the general dentist.},
+  year    = {2022},
+  pages   = {1--8},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
