--- a/CV_en/CV_en.tex
+++ b/CV_en/CV_en.tex
@@ -24,7 +24,7 @@
 %	NAME AND CONTACT INFORMATION
 %----------------------------------------------------------------------------------------
 \newcommand{\name}{Eloy Alvarado Narváez}
-\newcommand{\dob}{August 18, 1990.}
+\newcommand{\dob}{August 18, 1990}
 \newcommand{\address}{Valparaíso, Chile.}
 \newcommand{\phone}{+56 9 85682232}
 \newcommand{\email}{ealvaradonarvaez@gmail.com}
@@ -180,7 +180,7 @@ Develop Research of Excellence for Advanced Meritorious Students \
 \headedsubsection 
 {Statistical Analyst}
 {April '16 -- February '17}
-{\bodytext{Statistical Analyst for the Data \& Analytics group. In charge of acting as a bridge between statistical analyst in Alpharetta, USA and the software development center in Chile. Among the activities carried out include: validation of attribute creation models, database validation, optimization and support of SAS code, SAS administrator, statistical support within a distributed environment.
+{\bodytext{Statistical Analyst for the Data \& Analytics group. In charge of acting as a bridge between statistical analysts in Alpharetta, USA and the software development center in Chile. Among the activities carried out include: validation of attribute creation models, database validation, optimization and support of SAS code, SAS administrator, statistical support within a distributed environment.
 }}}
 
 %------------------------------------------------
